--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
             const osData = {
                 'Linux': {
                     description: 'Linux (comme Kubuntu) est un système d\'exploitation libre et gratuit, très sécurisé et personnalisable.',
-                    advantages: '✓ Gratuit ✓ Sécurisé ✓ Rapide ✓ Pas de virus'
+                    advantages: '✓ Gratuit ✓ Sécurisé ✓ Rapide ✓ Peu de virus'
                 },
                 'macOS': {
                     description: 'macOS est le système d\'exploitation d\'Apple, réputé pour sa simplicité et son design.',
