--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     </div>
                     <div class="credential">
                         <strong>Mot de passe :</strong><br>
-                        52526372
+                        ********Demande le mot de passe à ton formateur********
                     </div>
                 </div>
 
